destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: govbr-instance
spec:
  host: govbr-instance
  subsets:
  - name: v1
    labels:
      version: v1
