virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: govbr-ingress
spec:
  hosts:
  - govbr-instance
  http:
  - route:
    - destination:
        host: govbr-instance
